RESOLVED FIXED267296
[iOS] With media capability grants enabled, unable to activate camera or mic on bing.com
https://bugs.webkit.org/show_bug.cgi?id=267296
Summary [iOS] With media capability grants enabled, unable to activate camera or mic ...
Andy Estes
Reported 2024-01-09 13:38:10 PST
[iOS] With media capability grants enabled, unable to activate camera or mic on bing.com
Attachments
Andy Estes
Comment 1 2024-01-09 13:38:31 PST
Andy Estes
Comment 2 2024-01-09 13:51:28 PST
EWS
Comment 3 2024-01-09 17:28:18 PST
Committed 272833@main (35716bf5f66c): <https://commits.webkit.org/272833@main> Reviewed commits have been landed. Closing PR #22553 and removing active labels.
youenn fablet
Comment 4 2024-01-30 00:02:15 PST
*** Bug 268159 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 5 2024-03-29 00:38:53 PDT
*** Bug 268159 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.